# starwatch

./: .env.example  .gitignore  AGENTS.md  LICENSE  PI_INSTALL.md  README.md  pyproject.toml  start.md
.grok/skills/amherst-observing-weather/: SKILL.md
.grok/skills/research-builder/: SKILL.md
.grok/skills/research-builder/templates/: digest.md  experiment-card.md  inject-prompt.md  memory-line.json
.grok/skills/research-builder/tracks/: equities.md  kernels.md  rl-small.md
config/: indi-profile.md  starwatch.yaml
docs/: agents.md  arrival-checklist.md  cables-and-power.md  evolution-925.md  handoff.md  hardware.md  imaging-kit-700.md  setup-pi.md  tv-setup.md
docs/celestron/: FIRMWARE.md  IMAGING.md  README.md  SETUP-GUIDE.md  STARWATCH-INTEGRATION.md
scripts/: connect-mount.sh  simulate-indi.sh
starwatch/: __init__.py  cli.py  config.py  factory.py
starwatch/agent/: __init__.py  tools.py
starwatch/client/: __init__.py  base.py  indi.py  mock.py
starwatch/server/: __init__.py  app.py
starwatch/telescope/: __init__.py  controller.py  coordinates.py
tests/: conftest.py  test_api.py  test_controller.py  test_coordinates.py  test_tools.py
