[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starwatch"
version = "0.1.0"
description = "Agentic control of Celestron NexStar Evolution telescopes via INDI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
indi = [
    # Install on Pi/StellarMate only — requires libindi-dev + swig
    "pyindi-client @ git+https://github.com/indilib/pyindi-client.git",
]
astro = [
    "astropy>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
starwatch = "starwatch.cli:main"
starwatch-server = "starwatch.server.app:run"

[project.urls]
Homepage = "https://github.com/ajwharton/starwatch"
Repository = "https://github.com/ajwharton/starwatch"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["starwatch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]